syntax = "proto3";

// https://developer.github.com/v3/activity/events/types/#deleteevent

package github;



//options (gogoproto.marshaler_all) = true;
//options (gogoproto.sizer_all) = true;
//options (gogoproto.unmarshaler_all) = true;
//options (gogoproto.goproto_getters_all) = false;

import "user.proto";
import "repository.proto";

message DeleteEvent {
	string ref = 1;
	string ref_type = 2;
	string pusher_type = 3;
	Repository repository = 4;
	User sender = 7;
}
