syntax = "proto3";

// https://developer.github.com/v3/activity/events/types/#forkevent

package github;



//options (gogoproto.marshaler_all) = true;
//options (gogoproto.sizer_all) = true;
//options (gogoproto.unmarshaler_all) = true;
//options (gogoproto.goproto_getters_all) = false;

import "user.proto";
import "repository.proto";

message ForkEvent {
	Repository forkee = 1;
	Repository repository = 2;
	User sender = 3;
}
