syntax = "proto3";

// https://developer.github.com/early-access/integrations/webhooks/#integrationinstallationevent

package github;



//options (gogoproto.marshaler_all) = true;
//options (gogoproto.sizer_all) = true;
//options (gogoproto.unmarshaler_all) = true;
//options (gogoproto.goproto_getters_all) = false;

import "user.proto";

message Installation {
	int32 id = 1;
	User account = 2;
	string access_tokens_url = 3;
	string repositories_url = 4;
	string html_url = 5;
}

message IntegrationInstallation {
	string action = 1;
	Installation installation = 2;
	User sender = 3;
}
