syntax = "proto3";

// https://developer.github.com/v3/activity/events/types/#issuecommentevent

package github;



//options (gogoproto.marshaler_all) = true;
//options (gogoproto.sizer_all) = true;
//options (gogoproto.unmarshaler_all) = true;
//options (gogoproto.goproto_getters_all) = false;

import "user.proto";
import "issue.proto";
import "comment.proto";
import "repository.proto";

message IssueCommentEvent {
	string action = 1;
	Issue issue = 2;
	Comment comment = 3;
	Repository repository = 4;
	User sender = 5;
}
