syntax = "proto3";

// https://developer.github.com/v3/activity/events/types/#issuesevent

package github;



//options (gogoproto.marshaler_all) = true;
//options (gogoproto.sizer_all) = true;
//options (gogoproto.unmarshaler_all) = true;
//options (gogoproto.goproto_getters_all) = false;

import "user.proto";
import "issue.proto";
import "repository.proto";

message IssuesEvent {
	string action = 1;
	Issue issue = 2;
	Repository repository = 3;
	User sender = 4;
}
