syntax = "proto3";

// https://developer.github.com/v3/activity/events/types/#memberevent

package github;



//options (gogoproto.marshaler_all) = true;
//options (gogoproto.sizer_all) = true;
//options (gogoproto.unmarshaler_all) = true;
//options (gogoproto.goproto_getters_all) = false;

import "user.proto";
import "repository.proto";

message MemberEvent {
	string action = 1;
	User member = 2;
	Repository repository = 3;
	User sender = 4;
}
