syntax = "proto3";

// https://developer.github.com/v3/activity/events/types/#membershipevent

package github;



//options (gogoproto.marshaler_all) = true;
//options (gogoproto.sizer_all) = true;
//options (gogoproto.unmarshaler_all) = true;
//options (gogoproto.goproto_getters_all) = false;

import "user.proto";
import "team.proto";

message MembershipEvent {
	string action = 1;
	string scope = 2;
	User member = 3;
	User sender = 4;
	Team team = 5;
	User organization = 6;
}
