syntax = "proto3";

// https://developer.github.com/v3/activity/events/types/#publicevent

package github;



//options (gogoproto.marshaler_all) = true;
//options (gogoproto.sizer_all) = true;
//options (gogoproto.unmarshaler_all) = true;
//options (gogoproto.goproto_getters_all) = false;

import "user.proto";
import "repository.proto";

message PublicEvent {
	Repository repository = 1;
	User sender = 2;
}
