syntax = "proto3";

// https://developer.github.com/v3/activity/events/types/#pullrequestevent

package github;



//options (gogoproto.marshaler_all) = true;
//options (gogoproto.sizer_all) = true;
//options (gogoproto.unmarshaler_all) = true;
//options (gogoproto.goproto_getters_all) = false;

import "user.proto";
import "repository.proto";
import "pull_request.proto";

message PullRequestEvent {
	string action = 1;
	int32 number = 2;
	PullRequest pull_request = 3;
	Repository repository = 4;
	User sender = 5;
}
